src/features/TestConstructor/ui/Question/FIllGapsQuestion/FillGapsQuestion.module.css
.container {
    position: relative;
}

.mirror-div {
    position: absolute;
    pointer-events: none;
    color: var(--color-text-primary);
    white-space: pre-wrap;
    overflow-wrap: break-word;
    max-width: 100%;
    padding: var(--spacing-s) var(--spacing-m);
    color: transparent;
}

.textarea {
    overflow: hidden;
    padding: 0px;
    border: none;
    width: 100%;
    min-height: fit-content;
    display: flex;
    resize: none;
    color: transparent;
    caret-color: var(--color-text-primary);
    overflow-wrap: break-word;
}

textarea.textarea:focus {
    filter: none;
}

.highlighted-text {
    pointer-events: auto;
    gap: 0px;
    position: relative;
    border-radius: 5px;
    background-color: color-mix(in srgb, var(--color-brand-accent) 50%, rgba(255, 255, 255, 0) 50%);
    padding: 0px;
    margin: 0px;
}

.insert-gap-container span {
    display: inline-flex;
    align-items: center;
    gap: var(--spacing-xs);
}

.insert-gap-container span svg {
    margin-top: 4px;
    flex-shrink: 0;
}

.insert-gap-container button {
    pointer-events: auto;
    text-wrap: nowrap;
    line-height: 1;
    display: inline-flex;
    gap: var(--spacing-xs);
}

.insert-gap-container button>* {
    flex-shrink: 0;
}

.insert-gap-container {
    width: fit-content;
    white-space: nowrap;
}

.insert-gap__button-container {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-xs);
}

.tooltip-content {
    user-select: none;
}

.gap {
    transition:
        transform var(--duration-m) var(--ease-spring),
        background-color var(--duration-s) var(--ease-default);

    --translucent-bg-color: color-mix(in srgb, var(--color-brand-accent) 60%, rgba(255, 255, 255, 0) 40%);
    background-color: var(--translucent-bg-color);
    border-radius: var(--radius-s);
    border-top: 1px solid var(--color-brand-accent);
    border-bottom: 2px solid var(--color-brand-accent);
    z-index: 0;
    color: var(--color-text-primary);
    position: relative;
    pointer-events: auto;
}

.gap__size-handle:nth-of-type(1) {
    left: calc(-1 * var(--width) + 4px);
    border-top-left-radius: var(--radius-s);
    border-bottom-left-radius: var(--radius-s);
    padding-right: 4px;
    top: calc(1lh * 0.05);

    transform-origin: right;
}

.gap__size-handle:nth-of-type(2) {
    left: calc(var(--last-row-right) - 4px);
    border-top-right-radius: var(--radius-s);
    border-bottom-right-radius: var(--radius-s);
    padding-left: 4px;
    bottom: calc(1lh * 0.05);

    transform-origin: left;
}

.gap__controls {
    transition:
        transform var(--duration-l) var(--ease-spring),
        opacity var(--duration-m) var(--ease-default);
    opacity: 0;
    z-index: -1;
    position: absolute;
}

.gap__size-handle {
    --width: 16px;
    width: var(--width);
    display: flex;
    align-items: center;
    height: calc(1lh * 0.8);
    cursor: ew-resize;

    transform: scaleX(0);
}

.gap__options-toggle-trigger {
    --size: 16px;
    --bottom-offset: -4px;
    --options-size: 115px;
    transform-origin: 50% calc(100% + var(--bottom-offset));
    user-select: none;
    bottom: calc(100% + var(--bottom-offset));
    left: calc(50% - var(--size)/2);
    height: var(--height);
    background-color: var(--color-brand-accent);
    border-radius: var(--radius-s);
    line-height: var(--size);
    width: var(--size);
    padding: 3px;
    transform: scaleY(0);
}


/* dummy block to make the hover area bigger */
.gap__options-toggle-trigger::after {
    display: block;
    position: absolute;
    content: "";
    width: var(--options-size);
    left: calc(var(--options-size) * -0.5 + 50%);
    height: 10px;
    bottom: 4px;
    pointer-events: auto;
}

/* ===================== */

.gap__size-handle:nth-of-type(2)>* {
    rotate: 180deg;
}

.gap:hover,
.gap:hover .gap__controls {
    transition:
        transform var(--duration-m) var(--ease-spring),
        opacity var(--duration-s) var(--ease-default);
    opacity: 1;
    background-color: var(--color-brand-accent);
}

.gap:hover {
    z-index: 1;
}

.gap:hover .gap__controls {
    z-index: -1;
}

.gap:hover .gap__size-handle {
    transform: scaleX(1);
}

.gap:hover .gap__options-toggle-trigger {
    transform: scaleY(1);
}

.mirror-div--resizing .gap,
.mirror-div--resizing .gap:hover {
    background-color: var(--translucent-bg-color);
}

.mirror-div--resizing .gap__controls,
.mirror-div--resizing .gap:hover .gap__controls {
    pointer-events: none;
}

.mirror-div--resizing .gap__size-handle,
.mirror-div--resizing .gap:hover .gap__size-handle {
    transform: scaleX(0);
}

.mirror-div--resizing .gap__options-toggle-trigger,
.mirror-div--resizing .gap:hover .gap__options-toggle-trigger {
    transform: scaleY(0);
}

.gap__options {
    background-color: var(--color-brand-accent);
    font-size: var(--font-size-s);
    position: absolute;
    bottom: calc(-1 * var(--bottom-offset) + var(--spacing-xs));
    left: calc(50% - var(--options-size)/2);
    width: var(--options-size);
    height: calc(1lh + var(--spacing-xxs) * 2);
    display: flex;
    justify-content: stretch;
    overflow: hidden;
    border-radius: var(--radius-s);
    box-shadow: var(--box-shadow);
    opacity: 0;
    transform-origin: bottom;
    transform: scale(0);
    transition:
        transform var(--duration-m) var(--ease-spring),
        opacity var(--duration-s) var(--ease-default);
}

.gap__options-group {
    transition:
        transform var(--duration-m) var(--ease-spring),
        opacity var(--duration-s) var(--ease-default);
    transform-origin: bottom;
    position: absolute;
    display: flex;
    align-items: center;
    opacity: 0;
    width: 100%;
    transform: translateX(7px);
    pointer-events: none;
}

.gap__options-group--visible {
    transform: translateX(0px);
    opacity: 1;
    pointer-events: auto;
}

.gap__options-toggle-trigger:hover .gap__options {
    z-index: 1;
    opacity: 1;
    transform: scale(1);
}

.gap__options-divider {
    height: 1lh;
    width: 1px;
    background-color: var(--color-text-primary);
    flex-shrink: 0;
}

.gap__options button {
    font-family: var(--font-main);
    display: flex;
    justify-content: space-between;
    gap: var(--spacing-xxs);
    background-color: var(--color-brand-accent);
    cursor: pointer;
    flex-grow: 1;
    flex-wrap: nowrap;
    white-space: nowrap;
    padding: var(--spacing-xxs);
}

.gap__options button:hover {
    filter: brightness(1.3);
}

.gap__options button>* {
    flex-shrink: 0;
    height: 1lh;
}

.gap--is-editing {
    pointer-events: none;
    border-radius: 0px;
    border: none;
    transform: scale(0.5);
}

/* gap left and right border while editing */
.gap--is-editing::after {
    display: block;
    position: absolute;
    content: "";
    /* rough to account for the border */
    height: calc(1lh + 0.8px);
    top: -1px;
    /* =============================== */
    border-left: 2px solid;
    border-image: linear-gradient(to right, var(--color-brand-accent) 50%, var(--translucent-bg-color) 50%) 2;
    left: -2px;
    z-index: -1;
    pointer-events: none;
}

.gap--is-editing::before {
    display: block;
    position: absolute;
    content: "";
    /* rough to account for the border */
    height: calc(1lh + 0.8px);
    top: -1px;
    /* =============================== */
    border-left: 2px solid;
    border-image: linear-gradient(to right, var(--translucent-bg-color) 50%, var(--color-brand-accent) 50%) 2;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    left: calc(var(--last-row-right));
    z-index: -1;
    pointer-events: none;
}

/* ===================================== */

.gap--is-editing:hover .gap__size-handle {
    transition:
        transform var(--duration-s) var(--ease-default),
        opacity var(--duration-s) var(--ease-default);
    transform: scale(0);
}

.gap--is-editing .gap__options {
    opacity: 1;
    transform: scale(1);
    pointer-events: auto;
    z-index: 1;
}

.gap--is-editing .gap__options-toggle-trigger,
.gap--is-editing .gap__options-toggle-trigger:hover {
    transform: scale(1);
    opacity: 1;
    background-color: transparent;
}

.gap--is-editing:hover {
    background-color: var(--translucent-bg-color);
}

.gap--is-editing .gap__options {
    --options-size: 107px;
}

.gap--is-editing .gap__options button {
    border-radius: var(--radius-s);
}

.gap__options:hover .gap__options-toggle-trigger {
    color: transparent;
    background-color: transparent;
}

